--- a/labs/hplc-dad/references.bib
+++ b/labs/hplc-dad/references.bib
@@ -1,4 +1,4 @@
-@book{harris_quantitative_2010,
+@book{harris,
 	address = {New York},
 	edition = {8th ed},
 	title = {Quantitative chemical analysis},
@@ -7,5 +7,44 @@
 	author = {Harris, Daniel C.},
 	year = {2010},
 	keywords = {Chemistry, Analytic, Quantitative}
+}
+
+@article{rats,
+	author = {Shao, Rong and Tarloff, Joan B.},
+	title = {Lack of Correlation between para-Aminophenol Toxicity in Vivo and in Vitro in Female Sprague—Dawley Rats12},
+	journal = {Toxicological Sciences},
+	volume = {31},
+	number = {2},
+	pages = {268-278},
+	year = {1996}
+}
+
+@article{dogs-cats,
+	author = {McConkey, S. E. and Grant, D. M. and Cribb, A. E.},
+	title = {The role of para-aminophenol in acetaminophen-induced methemoglobinemia in dogs and cats},
+	journal = {Journal of Veterinary Pharmacology and Therapeutics},
+	volume = {32},
+	number = {6},
+	pages = {585-595}
+}
+
+@book{mold,
+	address = {Waltham, MA},
+	title = {Essentials in modern HPLC separations},
+	isbn = {9780123850133},
+	publisher = {Elsevier},
+	author = {Moldoveanu, Șerban and David, Victor},
+	year = {2013},
+	keywords = {Separation (Technology), High performance liquid chromatography}
+}
+
+@book{prep_hplc,
+	address = {Amsterdam ; Boston},
+	title = {A practical handbook of preparative HPLC},
+	isbn = {9781856174664},
+	publisher = {Elsevier},
+	author = {Wellings, Donald A.},
+	year = {2006},
+	keywords = {High performance liquid chromatography}
 }
 
