completed the introduction section

--- a/notes/summary/hplc/hplc-summary.tex
+++ b/notes/summary/hplc/hplc-summary.tex
@@ -19,6 +19,19 @@
 \newpage
 
 \section{Introduction}
+\begin{itemize}
+	\item HPLC stands for "High Performance Liquid Chromatography" or "High Pressure Liquid Chromatography"
+	\item \textbf{Advantages}
+	\begin{itemize}
+		\item Analysis of thermally unstable compounds
+		\item Analysis of nonvolatile compounds
+	\end{itemize}
+	\item \textbf{Major requirement of LC}
+	\begin{itemize}
+		\item Solute solubility in mobile phase
+		\item This is in contrast to GC which require solute volatility
+	\end{itemize}
+\end{itemize}
 
 
 \section{Scope of HPLC}
