scope section is 90% completed & just started column efficieny, in hplc-summary

--- a/notes/summary/hplc/hplc-summary.tex
+++ b/notes/summary/hplc/hplc-summary.tex
@@ -35,9 +35,27 @@
 
 
 \section{Scope of HPLC}
+\begin{description}
+	\item[Adsorption chromatography (LSC)]
+	\item[Ion chromatography (IC)]
+	\item[Size-exclusion chromatography (SEC)]
+	\item[Partition chromatography] separation of analytes by partitioning, most commonly to a stationary phase bonded to a solid support \\ Note that this replaces liquid-liquid chromatography with its problems of stripping of stationary phase
+	\item[Hydrophobic interaction chromatography (HIC)] for separation of proteins without denaturation
+	\item[Hydrophilic interaction chromatography (HILIC)] for separation of very polar analytes
+	\item[Chiral chromatography]
+	\item[Affinity chromatography]
+\end{description}
 
 
 \section{Column Efficiency in HPLC}
+\begin{itemize}
+	\item Recall the van Deemter equation for GLC (commonly called GC) for packed columns:
+	\begin{equation}
+		H = A + \frac{B}{u} + Cu
+	\end{equation}
+	\item For longitudinal diffusion in LC, as the $D_l \approx 10^{-5}D_g$, the peak broadening due to longitudinal diffusion in mobile phase (liquid) phase in LC is \textit{negligible}.
+	\item i.e., $\frac{B}{u} = \frac{2\gamma{}D_m}{u}$
+\end{itemize}
 
 
 \section{Pumps}
