completed 90% of chemical hazards section in prelab of gc-ms

--- a/labs/gc-ms/prelab/prelab-gcms.tex
+++ b/labs/gc-ms/prelab/prelab-gcms.tex
@@ -20,9 +20,9 @@ The main objective of this experiment is to\dots
 \section{Chemicals and their Hazards}
 
 \begin{description}
-	\item[BDE-47]
-	\item[PBB-77]
-	\item[`2-HCH]
+	\item[BDE-47] full form: 2,2',4,4'-tetrabromodiphenyl ether; may be harmful if inhaled, swallowed, may cause skin and eye irritation.
+	\item[PBB-77] full form: 3,3',4,4'-tetrabromobiphenyl; 
+	\item[`2-HCH] also known as lindane; may cause acute toxicity, health hazard, hazardous to the aquatic environment.
 \end{description}
 
 \printbibliography
