finish the Instrumentation section in hplc lap report

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -74,12 +74,10 @@ The safety information for the aforementioned chemicals: (this might not be need
 \end{description}
 
 \subsection{Instrumentation}
-The separation and analysis of the unknown pharmaceutical mixtures was performed on an Agilent 1100 Series, with a 1260 Infinity degasser (both by Agilent Technologies), fitted with a diode array detector (DAD). The type of column used was a Symmetry\textregistered{} \ce{C18} (particle size of \SI{5}{\mu{}m}, diameter of \SI{4.6}{mm}, and a length of \SI{150}{mm}). The flow rate for each analysis was kept at a constant value of \SI{5}{\mu{}L}.
-
-The separation was performed on an Agilent(?) 122-5032 J\&W DB-5 capillary column, \SI{30}{m} length $\times$ \SI{0.25}{mm} i.d. $\times$ \SI{0.25}{\mu{}m} thickness, \SI{7}{inch} cage. Its stationary phase was 5$\%$ Phenyl/95$\%$ methylpolysiloxane (DB-5). In addition, each analysis was conducted with the injection mode at splitless and the carrier gas in the GC-FID was \ce{He}, with a flow rate of \SI{1}{\frac{mL}{min}}. The injector port temperature was set to \SI{260}{\degreeCelsius} and for the analyses of toluene and naphthalene, the detector temperature was set to \SI{280}{\degreeCelsius}, and it was increased to \SI{300}{\degreeCelsius} for the analyses of the pharmaceutical mixture and the standards.
+The separation and analysis of the unknown pharmaceutical mixtures, and the standards, were performed on an Agilent 1100 Series, with a 1260 Infinity degasser (both by Agilent Technologies), fitted with a diode array detector (DAD). The type of column used was a Symmetry\textregistered{} \ce{C18} (particle size of \SI{5}{\mu{}m}, diameter of \SI{4.6}{mm}, and a length of \SI{150}{mm}). The flow rate for each analysis was kept at a constant value of \SI{1}{mL/min}, and the injection volume was \SI{5}{\mu{}L}, for each analysis.
 
 \subsection{Methods}
-
+Write your methods here \dots
 
 %----------------------------------------------------------------------------------------
 %	SECTION 4
