made 2 tables in results section

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -61,10 +61,11 @@ The main objectives of this experiment is to \ldots{}
 %	SECTION 3
 %----------------------------------------------------------------------------------------
 
-\section{Methods and Instrumentation}
+\section{Chemicals, Methods and Instrumentation}
 
 \subsection{Chemicals}
 Toluene (HPLC grade chemical, LOT: 591103-A6, CAS: 108-88-3), naphthalene (Fisher Scientific, LOT: 895861, CAS: 91-20-3), and a mixture of PAH (PAH mix 1, LOT w00382; PAH mix 2, CD-1661; Ultra EPA 2138N-1, EOA 2139N-1, ACN) were used in this experiment.
+
 
 The safety information for the aforementioned chemicals: (this might not be needed...)
 \begin{description}
@@ -86,15 +87,56 @@ Write your methods here \dots
 \section{Results and Discussion}
 
 \subsection{Results}
-Write your results here\ldots
+As stated earlier, (maybe?), in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in reverse-phase HPLC. The corresponding chromoatograms are in the index, and table \ref{tab-capacity-factors} summarizes the aforementioned chromotagrams.
 
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{|c|c|c|}
+		\hline
+		Methanol/\% & k' & log k' \\
+		\hline
+		100 & & \\
+		\hline
+		90 & & \\
+		\hline
+		80 & & \\
+		\hline
+		70 & & \\
+		\hline
+	\end{tabular}
+	\caption{Data that shows how the capacity factors (k) differ with the change in composition in methanol}
+	\label{tab-capacity-factors}
+\end{table}
+
+In addition, figure \ref{fig-capacity-factors} illustrates the log of the capacity factors as a function of the polarity of methanol.
+
+Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) varies with the 
+
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{|c|c|c|}
+		\hline
+		Methanol/\% & k' & log k' \\
+		\hline
+		100 & & \\
+		\hline
+		90 & & \\
+		\hline
+		80 & & \\
+		\hline
+		70 & & \\
+		\hline
+	\end{tabular}
+	\caption{Data that shows how the selectivity factors ($\alpha$) change with the polarity of methanol}
+	\label{tab-selectivity}
+\end{table}
 
 \subsection{Discussion}
-Write your discussion here\dots
+Give a reason as to why reverse-phase is used as a separation technique and not normal phase.
 
 The reason for using internal standards and not standard addition for calculating the concentration of the unknown analyte is that internal standards are preferred when give an accurate answer when 
 
-In conclusion\dots
+In conclusion, reversed-phase HPLC gives a \dots
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5 (BIBLIOGRAPHY)
