finish 85% of the results section in hplc lab report

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -18,7 +18,7 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Separation and Analysis of Pharmaceuticals using RP-HPLC \\ CHEM 4303 \\ Analytical Separations} % Title
+\title{Separation and Analysis of An Unknown Pharmaceutical mixture using RP-HPLC \\ CHEM 4303 \\ Analytical Separations} % Title
 
 \author{Robby \textsc{Renz}} % Author name
 
@@ -66,14 +66,6 @@ The main objectives of this experiment is to \ldots{}
 \subsection{Chemicals}
 Toluene (HPLC grade chemical, LOT: 591103-A6, CAS: 108-88-3), naphthalene (Fisher Scientific, LOT: 895861, CAS: 91-20-3), and a mixture of PAH (PAH mix 1, LOT w00382; PAH mix 2, CD-1661; Ultra EPA 2138N-1, EOA 2139N-1, ACN) were used in this experiment.
 
-
-The safety information for the aforementioned chemicals: (this might not be needed...)
-\begin{description}
-	\item[Toluene] flammable, potential acute and chronic health effects.
-	\item[Naphthalene] flammable, toxic and carcinogenic.
-	\item[PAH mixture] flammable, can cause death, health hazard, can cause damage to the aquatic environment.
-\end{description}
-
 \subsection{Instrumentation}
 The separation and analysis of the unknown pharmaceutical mixtures, and the standards, were performed on an Agilent 1100 Series, with a 1260 Infinity degasser (both by Agilent Technologies), fitted with a diode array detector (DAD). The type of column used was a Symmetry\textregistered{} \ce{C18} (particle size of \SI{5}{\mu{}m}, diameter of \SI{4.6}{mm}, and a length of \SI{150}{mm}). The flow rate for each analysis was kept at a constant value of \SI{1}{mL/min}, and the injection volume was \SI{5}{\mu{}L}, for each analysis.
 
@@ -87,7 +79,7 @@ Write your methods here \dots
 \section{Results and Discussion}
 
 \subsection{Results}
-As stated earlier, (maybe?), in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in reverse-phase HPLC. The corresponding chromoatograms are in the index, and table \ref{tab-capacity-factors} summarizes the aforementioned chromotagrams.
+As stated earlier, (maybe?), in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in reverse-phase HPLC. The corresponding chromoatograms are given in the appendix (figures 1 to 4), and table \ref{tab-capacity-factors} summarizes the aforementioned chromotagrams.
 
 \begin{table}[h!]
 	\centering
@@ -131,8 +123,75 @@ Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) vari
 	\label{tab-selectivity}
 \end{table}
 
+Figures 5, 6 and 7 show the chromatograms of a chlorobenzene, nitrobenzene and benzaldehyde standards, respectively. In addition, figure 8 illustrates the chromatogram of the unknown pharmaceutical mixture. While figures 9, 10, 11 and 12 shows the chromatograms of the caffeine, phenacetin, salicylamide and the acetominophen standard, respectively.
+
+Finally, in the quantitative analysis of the experiment, figures 13, 14, 15, 16 and 17 represent the chromatograms \dots{}. Figures 18 and 19 show the chromatograms of the analysis of the aforementioned pharmaceutical unknown. Finally, figures 20, 21 and 22 represents the chromatograms of the blank that was run (50\% methanol).
+
+The pressure of the column(?) for each analysis is shown in table \ref{tab-pressure}. Note that the figure headings correspond to the analysis of the chromatograms in the appendix.
+
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{|c|c|}
+		\hline
+		Figure number & Pressure/bar\\
+		\hline
+		Figure 1  & 72 \\ 
+		\hline
+		Figure 2 & 98 \\
+		\hline
+		Figure 3 & 122 \\
+		\hline
+		Figure 4 & 143 \\
+		\hline
+		Figure 5 & 143 \\
+		\hline
+		Figure 6 & 143 \\
+		\hline
+		Figure 7 & 143 \\
+		\hline
+		Figure 8 & 178 \\
+		\hline
+		Figure 9 & 178 \\
+		\hline
+		Figure 10 & 178 \\
+		\hline
+		Figure 11 & 178 \\
+		\hline
+		Figure 12 & 178 \\
+		\hline
+		Figure 13 & \\
+		\hline
+		Figure 14 & \\
+		\hline
+		Figure 15 & \\
+		\hline
+		Figure 16 & \\
+		\hline
+		Figure 17 & \\
+		\hline
+		Figure 18 & \\
+		\hline
+		Figure 19 & \\
+		\hline
+		Figure 20 & \\
+		\hline
+		Figure 21 & \\
+		\hline
+		Figure 22 &  \\ 
+		\hline
+	\end{tabular}
+	\caption{Table that tabulates how the selectivity factors ($\alpha$) change with the polarity of methanol}
+	\label{tab-pressure}
+\end{table}
+
+\textbf{Now draw a table for the data of the calibration curve, and include a figure.}
+
 \subsection{Discussion}
 Give a reason as to why reverse-phase is used as a separation technique and not normal phase.
+
+Maybe state why the pressure increases as the polarity of the mobile phase increases. Hint: its because of the hydrogen bonding of the water molecules, hence a larger pressure is needed to push it through the column.
+
+In the quantitative identification of the pharmaceutical unknown mixture, the initial concentration of the mobile phase was chosen as 50\% methanol, and based on the chromatogram received, this composition was considered to be desirable for the analysis of the aforementioned unknown mixture. This was based on the resolution of the peaks and the retention time for each peaks.
 
 The reason for using internal standards and not standard addition for calculating the concentration of the unknown analyte is that internal standards are preferred when give an accurate answer when 
 
@@ -167,8 +226,7 @@ In conclusion, reversed-phase HPLC gives a \dots
 \end{description}
 
 \subsection{Chromatograms}
-There are 50(?) pages of printouts that were collected during this experiment, 6 of which are GC-FID chromatograms.(?)
-
+There are 22 sheets of HPLC chromatograms.
 
 %----------------------------------------------------------------------------------------
 
