finished chemicals section in hplc lab report

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -64,7 +64,7 @@ The main objectives of this experiment is to \ldots{}
 \section{Chemicals, Methods and Instrumentation}
 
 \subsection{Chemicals}
-Toluene (HPLC grade chemical, LOT: 591103-A6, CAS: 108-88-3), naphthalene (Fisher Scientific, LOT: 895861, CAS: 91-20-3), and a mixture of PAH (PAH mix 1, LOT w00382; PAH mix 2, CD-1661; Ultra EPA 2138N-1, EOA 2139N-1, ACN) were used in this experiment.
+Benzaldehyde (Sigma Aldrich, Lot: 41696 PKV), nitrobenzene (Alfa Aesar, Lot: A06V040, 99\%, CAS: 98-95-3), methanol (HPLC grade, Caledon, Lot: 103267, CAS: 108-90-7), salicylamide (Sigma Aldrich, Lot: S51885-279, CAS: 65-45-2), phenacetin (Sigma Aldrich, Lot 78C-0014), acetominophen (Sigma Aldrich, Lot: 32F-0073), caffeine (Sigma Aldrich, Lot: 0316B4), and an unknown pharmaceutical mixture was used in this experiment.
 
 \subsection{Instrumentation}
 The separation and analysis of the unknown pharmaceutical mixtures, and the standards, were performed on an Agilent 1100 Series, with a 1260 Infinity degasser (both by Agilent Technologies), fitted with a diode array detector (DAD). The type of column used was a Symmetry\textregistered{} \ce{C18} (particle size of \SI{5}{\mu{}m}, diameter of \SI{4.6}{mm}, and a length of \SI{150}{mm}). The flow rate for each analysis was kept at a constant value of \SI{1}{mL/min}, and the injection volume was \SI{5}{\mu{}L}, for each analysis.
@@ -180,7 +180,7 @@ The pressure of the column(?) for each analysis is shown in table \ref{tab-press
 		Figure 22 &  \\ 
 		\hline
 	\end{tabular}
-	\caption{Table that tabulates how the selectivity factors ($\alpha$) change with the polarity of methanol}
+	\caption{Table that tabulates how the pressure changes with each analysis. The figure number references the chromatogram in the appendix.}
 	\label{tab-pressure}
 \end{table}
 
