finish objectives section in hplc lab report

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -18,7 +18,7 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Separation and Analysis of An Unknown Pharmaceutical mixture using RP-HPLC \\ CHEM 4303 \\ Analytical Separations} % Title
+\title{Separation, Analysis and Quantitative Analysis of An Unknown Pharmaceutical mixture using RP-HPLC \\ CHEM 4303 \\ Analytical Separations} % Title
 
 \author{Robby \textsc{Renz}} % Author name
 
@@ -55,7 +55,7 @@ High performance liquid chromatography (HPLC) is a type of chromatographic techn
 
 Acetaminophen (APAP), an antipyretic and a famous analgesic for humans, is known to cause poisons in cats and dogs \cite{dogs-cats}. And para-Aminophenol (PAP), an APAP metabolite, is a known nephrotoxicant for rats \cite{rats}. Thus, there is a need to separate as well as analyze these pharmaceutical components, and that is the main purpose of this experiment. And this is done with an RP-HPLC.
 
-The main objectives of this experiment is to \ldots{}
+There were three main objectives in this experiment; in the first week, the purpose was to test the efficiency of separations in RP-HPLC by varying the composition of the mobile phase (methanol). In the qualitative part of the experiment, the purpose was to identify the types of compounds present in an unknown pharmaceutical mixture. Finally, in the quantitative part of the experiment, the purpose was to find out the mass of one of the drugs present in the aforementioned unknown pharmaceutical mixture.
 
 %----------------------------------------------------------------------------------------
 %	SECTION 3
@@ -79,7 +79,7 @@ Write your methods here \dots
 \section{Results and Discussion}
 
 \subsection{Results}
-As stated earlier, (maybe?), in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in reverse-phase HPLC. The corresponding chromoatograms are given in the appendix (figures 1 to 4), and table \ref{tab-capacity-factors} summarizes the aforementioned chromotagrams.
+As stated earlier, in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in RP-HPLC. The corresponding chromatograms are given in the appendix (figures 1 to 4), and table \ref{tab-capacity-factors} summarizes the aforementioned chromatograms.
 
 \begin{table}[h!]
 	\centering
