complete the methods section in hplc lab report

--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -18,7 +18,7 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Separation, Analysis and Quantitative Analysis of An Unknown Pharmaceutical mixture using RP-HPLC \\ CHEM 4303 \\ Analytical Separations} % Title
+\title{Separation and Quantitative Analysis of An Unknown Pharmaceutical mixture using RP-HPLC \\ CHEM 4303 \\ Analytical Separations} % Title
 
 \author{Robby \textsc{Renz}} % Author name
 
@@ -67,10 +67,14 @@ There were three main objectives in this experiment; in the first week, the purp
 Benzaldehyde (Sigma Aldrich, Lot: 41696 PKV), nitrobenzene (Alfa Aesar, Lot: A06V040, 99\%, CAS: 98-95-3), methanol (HPLC grade, Caledon, Lot: 103267, CAS: 108-90-7), salicylamide (Sigma Aldrich, Lot: S51885-279, CAS: 65-45-2), phenacetin (Sigma Aldrich, Lot 78C-0014), acetominophen (Sigma Aldrich, Lot: 32F-0073), caffeine (Sigma Aldrich, Lot: 0316B4), and an unknown pharmaceutical mixture was used in this experiment.
 
 \subsection{Instrumentation}
-The separation and analysis of the unknown pharmaceutical mixtures, and the standards, were performed on an Agilent 1100 Series, with a 1260 Infinity degasser (both by Agilent Technologies), fitted with a diode array detector (DAD). The type of column used was a Symmetry\textregistered{} \ce{C18} (particle size of \SI{5}{\mu{}m}, diameter of \SI{4.6}{mm}, and a length of \SI{150}{mm}). The flow rate for each analysis was kept at a constant value of \SI{1}{mL/min}, and the injection volume was \SI{5}{\mu{}L}, for each analysis.
+The separation and analysis of the unknown pharmaceutical mixtures, and the standards, were performed on an Agilent 1100 Series, with a 1260 Infinity degasser (both by Agilent Technologies), fitted with a diode array detector (DAD). The type of column used was a Symmetry\textregistered{} \ce{C18} (particle size of \SI{5}{\mu{}m}, diameter of \SI{4.6}{mm}, and a length of \SI{150}{mm}). The flow rate for each analysis was kept at a constant value of \SI{1}{mL/min}, and the injection volume was \SI{5}{\mu{}L} for each analysis.
 
 \subsection{Methods}
-Write your methods here \dots
+In ``testing the retention behavior in RP-HPLC'' part of the experiment, benzaldehyde, nitrobenzene and chlorobenzene, with volumes of \SI{30}{\mu{}L}, \SI{30}{\mu{}L} and \SI{4}{mL}, respectively, were mixed together. \SI{20}{\mu{}L} of this mixture was diluted with \SI{5}{mL} of HPLC-grade methanol. This diluted mixture was analysed in the HPLC utilizing the RP technique, and the mobile phase was varied until the separations were deemed satisfied. Standards were also prepared for benzaldehyde, nitrobenzene and chlorobenzene. For nitrobenzene, \SI{30}{\mu{}L} of it were diluted with \SI{4.3}{mL} of methanol. And from this mixture, \SI{20}{\mu{}L} were diluted with \SI{5}{mL} of methanol. The same procedure was done for making the benzaldehyde standard. However, for the chlorobenzene standard, \SI{4}{mL} of it were added to \SI{60}{\mu{}L} of methanol, and then \SI{20}{\mu{}L} of this mixture was transferred to \SI{5}{mL} of methanol. The UV detection was set at \SI{254}{nm}.
+
+In the qualitative part of the experiment, \SI{0.0615}{g} of an unknown pharmaceutical mixture was grinded with a mortar and pestle, and dissolved in \SI{25}{mL} of methanol. \SI{500}{\mu{}L} of this mixture was added to \SI{5}{\mu{}L} of water and \SI{5}{\mu{}L} of methanol. This diluted mixture underwent RP-HPLC chromatography with an initial condition of $70:30$ methanol:water. This composition would be varied if necessary in order to get an optimal separation of the mixture. Standards of concentration \SI{2}{mg/mL} were made for salicylamide, phenacetin, caffeine and acetominophen so that the compounds in the mixture can be recognized. Note that these standards were diluted \num{10}-fold before being analyzed. The UV detection was set to \num{245} and \num{275} \si{nm}.
+
+Finally, in the qualitative part of the experiment, a series of calibration solutions was prepared with caffeine acting as the internal standard (IS). \SI{500}{\mu{}L} was the volume of caffeine that was added to each calibration solutions. Salicylamide and phenacetin was found out to be the two compounds in the unknown mixture, and phenacetin was chosen to be quantitatively analyzed. Volumes of \SI{100}{\mu{}L}, \SI{300}{\mu{}L}, \SI{500}{\mu{}L}, \SI{1500}{\mu{}L} and \SI{2500}{\mu{}L} of phenacetin was added to each \SI{10}{mL} of volumetric flask. A constant amount of IS was also added each flask (\SI{500}{\mu{}L}), and it was filled with 50\% methanol till the mark. These solutions was analyzed in the RP-HPLC.
 
 %----------------------------------------------------------------------------------------
 %	SECTION 4
@@ -96,11 +100,13 @@ As stated earlier, in the first week of the experiment, the compositions of the 
 		70 & & \\
 		\hline
 	\end{tabular}
-	\caption{Data that shows how the capacity factors (k) differ with the change in composition in methanol}
+	\caption{Data that shows how the capacity factors (k) differ with the change in composition in methanol.}
 	\label{tab-capacity-factors}
 \end{table}
 
 In addition, figure \ref{fig-capacity-factors} illustrates the log of the capacity factors as a function of the polarity of methanol.
+
+\textbf{Insert figure here\dots}
 
 Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) varies with the 
 
@@ -119,11 +125,13 @@ Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) vari
 		70 & & \\
 		\hline
 	\end{tabular}
-	\caption{Data that shows how the selectivity factors ($\alpha$) change with the polarity of methanol}
+	\caption{Data that shows how the selectivity factors ($\alpha$) change with the polarity of methanol.}
 	\label{tab-selectivity}
 \end{table}
 
-Figures 5, 6 and 7 show the chromatograms of a chlorobenzene, nitrobenzene and benzaldehyde standards, respectively. In addition, figure 8 illustrates the chromatogram of the unknown pharmaceutical mixture. While figures 9, 10, 11 and 12 shows the chromatograms of the caffeine, phenacetin, salicylamide and the acetominophen standard, respectively.
+Figures 5, 6 and 7 show the chromatograms of a chlorobenzene, nitrobenzene and benzaldehyde standards, respectively.
+
+In addition, figure 8 illustrates the chromatogram of the unknown pharmaceutical mixture. While figures 9, 10, 11 and 12 shows the chromatograms of the caffeine, phenacetin, salicylamide and the acetominophen standard, respectively. Note that the optimal composition of the mobile phase was found out to be $50:50$ methanol:water.
 
 Finally, in the quantitative analysis of the experiment, figures 13, 14, 15, 16 and 17 represent the chromatograms \dots{}. Figures 18 and 19 show the chromatograms of the analysis of the aforementioned pharmaceutical unknown. Finally, figures 20, 21 and 22 represents the chromatograms of the blank that was run (50\% methanol).
 
