--- a/labs/hplc-dad/hplc.tex
+++ b/labs/hplc-dad/hplc.tex
@@ -13,6 +13,8 @@
 \usepackage{geometry}
 \geometry{margin=1in}
 \usepackage{textcomp}
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
 
 %----------------------------------------------------------------------------------------
 %	DOCUMENT INFORMATION
@@ -83,35 +85,73 @@ Finally, in the qualitative part of the experiment, a series of calibration solu
 \section{Results and Discussion}
 
 \subsection{Results}
-As stated earlier, in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in RP-HPLC. The corresponding chromatograms are given in the appendix (figures 1 to 4), and table \ref{tab-capacity-factors} summarizes the aforementioned chromatograms.
+As stated earlier, in the first week of the experiment, the compositions of the mobile phase, methanol, was being varied with HPLC-grade water in order to notice the differences in separations in RP-HPLC. The corresponding chromatograms are given in the appendix (figures 1 to 4), and tables \ref{tab-tab-cf-benzaldehyde}, \ref{tab-cf-nitrobenzene} and \ref{tab-cf-chlorobenzene} summarizes the aforementioned chromatograms in terms of its capacity factors.
 
 \begin{table}[h!]
 	\centering
+	\caption{Data that shows how the capacity factor (k') of benzaldehyde differ with the change in composition in methanol.}
 	\begin{tabular}{|c|c|c|}
 		\hline
-		Methanol/\% & k' & log k' \\
+		Methanol/\% & k' of benzaldehyde & log k' \\
 		\hline
-		100 & & \\
+		90 & 0.218 & -0.662 \\
 		\hline
-		90 & & \\
+		80 & 0.333 & -0.478 \\
 		\hline
-		80 & & \\
-		\hline
-		70 & & \\
+		70 & 0.497 & -0.304 \\
 		\hline
 	\end{tabular}
-	\caption{Data that shows how the capacity factors (k) differ with the change in composition in methanol.}
-	\label{tab-capacity-factors}
+	\label{tab-cf-benzaldehyde}
 \end{table}
 
-In addition, figure \ref{fig-capacity-factors} illustrates the log of the capacity factors as a function of the polarity of methanol.
-
-\textbf{Insert figure here\dots}
-
-Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) varies with the 
+\begin{table}[h!]
+	\centering
+	\caption{Data that shows how the capacity factor (k') of nitrobenzene differ with the change in composition in methanol.}
+	\begin{tabular}{|c|c|c|}
+		\hline
+		Methanol/\% & k' of nitrobenzene & log k' \\
+		\hline
+		90 & 0.274 & -0.562 \\
+		\hline
+		80 & 0.459 & -0.338 \\
+		\hline
+		70 & 0.737 & -0.133 \\
+		\hline
+	\end{tabular}
+	\label{tab-cf-nitrobenzene}
+\end{table}
 
 \begin{table}[h!]
 	\centering
+	\caption{Data that shows how the capacity factor (k') of chlorobenzene differ with the change in composition in methanol.}
+	\begin{tabular}{|c|c|c|}
+		\hline
+		Methanol/\% & k' of chlorobenzene & log k' \\
+		\hline
+		90 & 0.629 & -0.201 \\
+		\hline
+		80 & 1.138 & 0.056 \\
+		\hline
+		70 & 2.026 & 0.307 \\
+		\hline
+	\end{tabular}
+	\label{tab-cf-chlorobenzene}
+\end{table}
+
+Figure \ref{fig-capacity-factors} illustrates the log of the capacity factors of the three compounds as a function of the polarity of methanolly.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{fig-capacity-2}
+	\caption{Plot of the Log k of benzaldehyde, nitrobenzene and chlorobenzene as a function of the polarity of methanol}
+	\label{fig-capacity-factors}
+\end{figure}
+
+Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) varies with the polarity of methanol.
+
+\begin{table}[h!]
+	\centering
+	\caption{Data that shows how the selectivity factors ($\alpha$) change with the polarity of methanol.}
 	\begin{tabular}{|c|c|c|}
 		\hline
 		Methanol/\% & k' & log k' \\
@@ -125,7 +165,6 @@ Table \ref{tab-selectivity} now shows how the selectivity factor ($\alpha$) vari
 		70 & & \\
 		\hline
 	\end{tabular}
-	\caption{Data that shows how the selectivity factors ($\alpha$) change with the polarity of methanol.}
 	\label{tab-selectivity}
 \end{table}
 
@@ -139,6 +178,7 @@ The pressure of the column(?) for each analysis is shown in table \ref{tab-press
 
 \begin{table}[h!]
 	\centering
+	\caption{Table that tabulates how the pressure changes with each analysis. The figure number references the chromatogram in the appendix.}
 	\begin{tabular}{|c|c|}
 		\hline
 		Figure number & Pressure/bar\\
@@ -188,7 +228,6 @@ The pressure of the column(?) for each analysis is shown in table \ref{tab-press
 		Figure 22 &  \\ 
 		\hline
 	\end{tabular}
-	\caption{Table that tabulates how the pressure changes with each analysis. The figure number references the chromatogram in the appendix.}
 	\label{tab-pressure}
 \end{table}
 
@@ -228,9 +267,20 @@ In conclusion, reversed-phase HPLC gives a \dots
 			\frac{A_X}{[X]} & = F\Bigg(\frac{A_S}{[S]}\Bigg)
 		\end{split}
 		\end{equation}
-			Equation \ref{response-factor} was taken from \cite{harris}, where $[X]$ and $[S]$ represent the concentrations of analyte and of the standard.
+			Equation \ref{response-factor} was taken from \cite{harris}, where $[X]$ and $[S]$ represent the concentrations of analyte and of the standard, respectively.
 
 	\item[$\%$RSD] \hfill \\
+
+	\item[Calculating the capacity factor of chlorobenzene for figure 2 of the chromatogram] \hfill \\
+		\begin{equation} \label{equ-capacity-factor}
+			\begin{split}
+				K & = \frac{t_r - t_m}{t_m} \\
+				K & = \frac{2.343 - 1.438}{1.438} \\
+				K & = \frac{0.905}{1.438} \\
+				K & = 0.629346 \approx 0.629
+			\end{split}
+		\end{equation}
+		Equation \ref{equ-capacity-factor} was taken from \cite{harris}.
 \end{description}
 
 \subsection{Chromatograms}
